crates/lobo-cli/tests/snapshots/help_parity__config.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Opens a form for the provider keys, access keys and the defaults `lobo up` uses.
Everything is stored as plain KEY=value lines in one file (see `lobo config path`).
You can edit that file by hand; the form keeps keys it does not show.

Usage:
  lobo config [OPTIONS] [COMMAND]

Available Commands:
  get   Print one value in clear (e.g. LOBO_API_KEY for a client config)
  path  Print the config file path
  set   Set keys in the config file (KEY= removes it); keeps every other line
  show  Print the config with API keys masked

Flags:
  -h, --help
          help for config

Global Flags:
      --config <string>
          config file (dotenv; the OS env is never read)
          
          [default: /home/u/.config/lobo/config.env]
