crates/lobo-cli/tests/snapshots/help_parity__config_get.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Print one value in clear (e.g. LOBO_API_KEY for a client config)

Usage:
  lobo config get [OPTIONS] <KEY>

Arguments:
  <KEY>  

Flags:
  -h, --help  help for get

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
