crates/lobo-cli/tests/snapshots/help_parity__config_path.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Print the config file path

Usage:
  lobo config path [OPTIONS]

Flags:
  -h, --help  help for path

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
