crates/lobo-cli/tests/snapshots/help_parity__gen-api-key.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Create LOBO_API_KEY in the config once (kept across ups) and write opencode.lobo.json with it

Usage:
  lobo gen-api-key [OPTIONS]

Flags:
      --rotate[=<ROTATE>]  replace the existing key
  -h, --help               help for gen-api-key

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
