crates/lobo-cli/tests/snapshots/help_parity__local.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Local-mode internals (spawned by `lobo up --provider local`)

Usage:
  lobo local [OPTIONS] [COMMAND]

Available Commands:
  run  Supervise llama-server on this Mac and serve the agent API on 127.0.0.1:--api-port

Flags:
  -h, --help  help for local

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
